@@ -77,11 +77,13 @@ BODY is executed."
                 (format
                  "\\(.*\\(%s\\)/\\)?\\([^\.]+\\)\\(.*\\)?"
                  (strings-join "\\|" rails-core:class-dirs)) "\\3" filename))
-         (path (replace-regexp-in-string "/" "::" path))
+         (path (replace-regexp-in-string "/" "  " path))
          (path (replace-regexp-in-string "_" " " path)))
     (replace-regexp-in-string
      " " ""
-     (capitalize path))))
+     (replace-regexp-in-string
+      "  " "::"
+      (capitalize path)))))
 
 (defun rails-core:file-by-class (classname &optional do-not-append-ext)
   "Return the filename associated with CLASSNAME.
